<resources>
    <string name="app_name">StoryApp</string>
    <string name="str_login">masuk</string>
    <string name="application_logo">Application Logo</string>
    <string name="btn_txt_daftar">Daftar</string>
    <string name="detaiL_nama">Nama</string>
    <string name="detail_screen_deskripsi">Deskripsi</string>
    <string name="open_gallery">Buka Gallery</string>
    <string name="take_picture">Ambil Gambar</string>
    <string name="story_image_desc">Story Image</string>
    <string name="desciption_hint">Desciption</string>
    <string name="submit_btn">Unggah</string>
    <string name="btn_logout">Keluar</string>
    <string name="btn_batal">Batal</string>
    <string name="logout_confirm">Anda yakin akan keluar aplikasi?</string>
    <string name="logout_confirm_judul">Konfirmasi Keluar</string>
    <string name="menu_logout">Keluar</string>
    <string name="str_daftar_user">Daftar User</string>
    <string name="str_nama">Nama</string>
    <string name="str_daftar">Daftar</string>
    <string name="str_password">Password</string>
    <string name="str_email">Email</string>
    <string name="add_story">Add Story</string>
    <string name="password_error">Password Tidak Boleh Kurang dari 6 Character</string>
    <string name="image_story">Image Story</string>
    <string name="title_menu_1">Tambahkan Story</string>
    <string name="desc_menu_1">Kini kamu bisa menambahkan story lewat StoryApp</string>
    <string name="title_menu_2">Lihat Story</string>
    <string name="desc_menu_2">Kamu bisa melihat story dan komentar orang lain</string>
    <string name="title_menu_3">Bagikan Story</string>
    <string name="desc_menu_3">Unggah story kamu agar orang lain tahu kegiatanmu</string>
    <string name="title_menu_4">Mulai Sekarang</string>
    <string name="desc_menu_4">Unggah story pertamamu disini</string>
    <string name="start">Masuk Aplikasi</string>
    <string name="have_account">Belum punya akun?</string>

</resources>