<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp"
        app:contentPadding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/logout_confirm_judul" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/logout_confirm" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_logout"
                android:textColor="@color/design_default_color_error" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_batal"
                android:textColor="@color/black" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>