<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        tools:context=".ui.detailscreen.DetailStoryFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/story_image_desc"
            android:src="@drawable/logo_story_app"
            android:transitionName="image_big"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/logo_story_app" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gallery"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/open_gallery"
            app:icon="@drawable/ic_image_search"
            app:layout_constraintEnd_toEndOf="@+id/til_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_camera"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/take_picture"
            app:icon="@drawable/ic_photo_camera"
            app:layout_constraintEnd_toEndOf="@id/btn_gallery"
            app:layout_constraintTop_toBottomOf="@id/btn_gallery"
            app:layout_constraintStart_toStartOf="@+id/btn_gallery" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/desciption_hint"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_upload"
            android:text="@string/submit_btn"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_camera"
            app:layout_constraintStart_toStartOf="@+id/btn_camera" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>