<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="id.asep.storyapp.domain.model.Stories" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detailscreen.DetilStoryFragment">

        <ImageView

            setImageUrl="@{model.photoUrl}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:contentDescription="@{model.description}"
            tools:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/detaiL_nama"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@{model.name}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            tools:text="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/detail_screen_deskripsi"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@{model.description}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            tools:text="@string/app_name" />
    </LinearLayout>
</layout>