<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="id.asep.storyapp.domain.model.Stories" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:shadowRadius="8"
        app:cardCornerRadius="10dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:clipToPadding="true"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/image_story"
                android:transitionName="image_big"
                android:id="@+id/img_photo"
                setImageUrl="@{model.photoUrl}"
                android:src="@drawable/logo_story_app"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:padding="4dp"
                android:id="@+id/txt_id"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.id}"
                app:layout_constraintBottom_toTopOf="@+id/txt_name"
                app:layout_constraintStart_toEndOf="@id/img_photo"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />

            <TextView
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:padding="4dp"
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.name}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/txt_id"
                app:layout_constraintTop_toBottomOf="@+id/txt_id"
                tools:text="@string/detaiL_nama" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</layout>