<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_login_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/application_logo"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toTopOf="@+id/card_login_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_login_logo"
            tools:layout_editor_absoluteX="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:hint="@string/str_email"
                    app:errorEnabled="true"

                    app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
                    tools:alpha="100">

                    <id.asep.storyapp.customview.EmailEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:hint="@string/str_password"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
                    tools:alpha="100">

                    <id.asep.storyapp.customview.PasswordEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:text="@string/str_login" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:alpha="0"
                    android:text="@string/btn_txt_daftar" />
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/card_login_form"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/card_login_form"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>